fix dropdown visibility broken by responsive

--- a/views/v0/dropdown.css
+++ b/views/v0/dropdown.css
@@ -3,7 +3,6 @@
 	position: relative;
 	display: inline-block;
 	width: 35%;
-	max-width: 30em;
 }
 
 /* Dropdown list */
@@ -20,7 +19,7 @@
 
 /* Show the dropdown when focused */
 .dropdown-content.show {
-	display: block;
+	display: block !important;
 }
 
 /* List items */
